# ml_natural_sciences

./: .gitignore  README.md  ex_02_Decisiontrees.ipynb  ex_03_MathBasic.ipynb  ex_05_MLBasics2.ipynb  ex_06_NN.ipynb  ex_07_AtomMD.ipynb  main.py  pyproject.toml
